适配 MSVC 编译环境

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,7 @@ project(agbr C CXX)
 cmake_minimum_required(VERSION 3.0...3.20 FATAL_ERROR)
 
 # compiler
-set(CMAKE_C_COMPILER clang)
-set(CMAKE_CXX_COMPILER clang++)
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -fPIC\
-    -Wno-unused-command-line-argument")
 
 # dependence
 find_package(OpenGL REQUIRED)
@@ -17,12 +13,6 @@ MESSAGE(opengl_lib:${OPENGL_LIBRARIES})
 SET(GLEW opengl/glew-2.2.0)
 SET(GLFW opengl/glfw-3.3.7)
 SET(LIBPP github.com/mcinglis)
-
-# mac special
-if (APPLE)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -framework OpenGL -framework IOKit\
-        -framework Cocoa -framework CoreVideo")
-endif ()
 
 # dir include
 include_directories(
@@ -32,10 +22,37 @@ include_directories(
         ${LIBPP}
 )
 
-# dir library
+# library
+SET(GLEW_LIB_DIR ${GLEW}/build/cmake/cmake-build-debug/lib)
+SET(GLFW_LIB_DIR ${GLFW}/cmake-build-debug/src)
+LIST(APPEND OPENGL_3RD_LIBS glfw3)
+if (WIN32)
+    SET(NEED_MSVC_TOOLSET 141)
+    if (${MSVC_TOOLSET_VERSION} EQUAL ${NEED_MSVC_TOOLSET})
+        ADD_COMPILE_OPTIONS(/experimental:preprocessor) # vs 2017
+    elseif (${MSVC_TOOLSET_VERSION} GREATER ${NEED_MSVC_TOOLSET})
+        ADD_COMPILE_OPTIONS(/Zc:preprocessor) # vs>=2019
+    else () # 低版本的 visual studio 编译 libpp 失败
+        MESSAGE(FATAL_ERROR "Need MSVC_TOOLSET_VERSION ${NEED_MSVC_TOOLSET} or later, current is ${MSVC_TOOLSET_VERSION}")
+    endif ()
+    # win32 debug
+    LIST(APPEND OPENGL_3RD_LIBS glew32d)
+    SET(GLEW_LIB_DIR ${GLEW_LIB_DIR}/${CMAKE_CONFIGURATION_TYPES})
+    SET(GLFW_LIB_DIR ${GLFW_LIB_DIR}/${CMAKE_CONFIGURATION_TYPES})
+else ()
+    LIST(APPEND OPENGL_3RD_LIBS glewd)
+    set(CMAKE_C_COMPILER clang)
+    set(CMAKE_CXX_COMPILER clang++)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -fPIC\
+        -Wno-unused-command-line-argument")
+    if (APPLE)
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -framework OpenGL -framework IOKit\
+        -framework Cocoa -framework CoreVideo")
+    endif ()
+endif ()
 link_directories(
-        ${GLEW}/build/cmake/cmake-build-debug/lib
-        ${GLFW}/cmake-build-debug/src
+        ${GLEW_LIB_DIR}
+        ${GLFW_LIB_DIR}
 )
 
 # src of directories
